# haddock-dingus

./: .devcontainer.json  .dockerignore  Dockerfile  Main.hs  README.md  cabal.project  fly.toml  haddock-dingus.cabal
.github/workflows/: ci.yml
