cabal-version: 3.8
name: haddock-dingus
version: 0.2024.6.26
synopsis: Easily preview Haddock markup.
description:
  Haddock Dingus easily previews Haddock markup.

category: Documentation
extra-doc-files: README.md
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  type: git
  location: https://github.com/tfausak/haddock-dingus

executable haddock-dingus
  build-depends:
    base ^>=4.20.0.0,
    bytestring ^>=0.12.1.0,
    containers ^>=0.7,
    haddock-library ^>=1.11.0,
    hashable ^>=1.4.7.0,
    http-types ^>=0.12.4,
    lucid2 ^>=0.0.20240424,
    stm ^>=2.5.3.1,
    text ^>=2.1.1,
    wai ^>=3.2.4,
    warp ^>=3.4.1,

  ghc-options:
    -rtsopts
    -threaded
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-unsafe

  main-is: Main.hs
