cabal-version: 3.8
name: haddock-dingus
version: 0.2026.1.7
synopsis: Easily preview Haddock markup.
description:
  Haddock Dingus easily previews Haddock markup.

category: Documentation
extra-doc-files: README.md
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  type: git
  location: https://github.com/tfausak/haddock-dingus

executable haddock-dingus
  autogen-modules: Paths_haddock_dingus
  build-depends:
    base ^>=4.22.0.0,
    bytestring ^>=0.12.2.0,
    containers ^>=0.8,
    haddock-library ^>=1.11.0,
    hashable ^>=1.5.1.0,
    http-types ^>=0.12.4,
    lucid2 ^>=0.0.20250303,
    stm ^>=2.5.3.1,
    text ^>=2.1.3,
    wai ^>=3.2.4,
    warp ^>=3.4.12,

  default-language: Haskell2010
  ghc-options:
    -rtsopts
    -threaded
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-unsafe

  main-is: Main.hs
  other-modules: Paths_haddock_dingus
